document generation for image

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,6 @@ opencv-python
 numpy
 matplotlib
 Pillow
-torch==2.4.1 --find-links https://download.pytorch.org/whl/cpu
+torch
 ultralytics
+python-docx
