--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ opencv-python-headless
 numpy
 matplotlib
 Pillow
-torch==2.4.1 --find-links https://download.pytorch.org/whl/cpu
+torch
 ultralytics
 gunicorn
+python-docx
